--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-speechrecognition
-PyAudio
-pyttsx3
-playsound
-gTTS
-yfinance
+SpeechRecognition==3.10.0
+PyAudio==0.2.13
+pyttsx3==2.90
+playsound==1.3.0
+gTTS==2.3.2
+yfinance==0.2.28
 python-dotenv==1.0.0
+requests==2.31.0
